Fix: Remove invisible- classes when switching four

--- a/app/haring/haring.css
+++ b/app/haring/haring.css
@@ -204,7 +204,7 @@
   font-size: 1.3vw;
   padding: 3%;
   padding-right: 1%;
-  overflow: scroll;
+  overflow-y: scroll;
   display: none;
 }
 
